--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </div>
         <canvas id="gameCanvas"></canvas>
         <div id="gameOver" class="game-over hidden">
-            <h2>You Win!</h2>
+            <h2 id="winMessage">You Win!</h2>
             <button onclick="location.reload()">Play Again</button>
         </div>
     </div>
